--- a/_lots/2598/369.md
+++ b/_lots/2598/369.md
@@ -7,8 +7,8 @@ HIGH: "1200"
 DESCRIPT: "(SPORTS.) Jackie Robinson, editor."
 CROSSHEAD: Complete run of the magazine Our Sports.
 at-a-glance: New York, May-October [1953]
-TYPESET: "<p>5 issues with original pictorial wrappers, each 11 x 8½ inches, minor
-  wear and soiling; internal condition generally strong, missing parts of 2 leaves.</p>"
+TYPESET: "5 issues with original pictorial wrappers, each 11 x 8½ inches, minor
+  wear and soiling; internal condition generally strong, missing parts of 2 leaves."
 FOOTNOTE: 'Billing itself as "the Negro''s own sports magazine," it featured coverage
   of all sports, with a particular emphasis on baseball, by leading black and white
   sportswriters. Typical articles included "Will a Negro Ever Become Manager in the
