--- a/_lots/2598/1.md
+++ b/_lots/2598/1.md
@@ -18,7 +18,7 @@ FOOTNOTE: ' By the brigantine Mary under master Jeffrey Bedgood, Thomas Hall shi
   American trade at auction through Swann. Dartmouth College holds a similar bill
   of lading signed by Bedgood dated 1718. No voyages for any vessels under Captain
   Bedgood are recorded in the SlaveVoyages database.  '
-year: 1708
+year: "1708"
 background_color: "#ffffff"
 images:
 - "/v1647292096/M45465-6_1-2_jbopfk.jpg"
