--- a/_lots/2598/369.md
+++ b/_lots/2598/369.md
@@ -20,7 +20,7 @@ FOOTNOTE: 'Billing itself as "the Negro''s own sports magazine," it featured cov
   Minnie Miñoso, and Satchel Paige), plus football player George Taliaferro, the first
   African American drafted by the NFL. "All issues are quite scarce. Complete runs
   are virtually unknown"--Lomazow, American Periodicals, 2005 Supplement, S468.  '
-year: 1953
+year: "1953"
 background_color: "#ffffff"
 
 ---
